modify new servlet

--- a/src/main/webapp/userForm.html
+++ b/src/main/webapp/userForm.html
@@ -5,7 +5,7 @@
 </HEAD>
 <BODY BGCOLOR="#FDF5E6">
 	<H2 ALIGN="CENTER">A Sample Form Using GET</H2>
-	<FORM ACTION="http://localhost:8080/SomeProgram">
+	<FORM ACTION="http://localhost:8080/test">
 	<CENTER>
 	First name:
 	<INPUT TYPE="TEXT" NAME="firstName" VALUE="J. Random"><BR>
